--- a/stack-based-mem-corruption.html
+++ b/stack-based-mem-corruption.html
@@ -273,7 +273,7 @@
                     <p class="section-lead">
                     <li>Creating Shellcode</li>
                     <li>Returning Execution Flow</li>
-                    <li>Drop NOPS not COPS:</li>
+                    <li>NOP Sleds, the Astroglide for you processor</li>
                     </p>
                     <hr>
                     <br>
@@ -284,6 +284,15 @@
 
                     <p class="lead section-lead"><b>Non-eXecutable Stack: (OS implemented)</b></p>
                     <hr>
+                    <p class="section-lead">Summary</p>
+                    <br>
+                    <p class="lead section-lead">Section-Index:</p>
+                    <p class="section-lead">
+                    <li>Memory Page Permissions</li>
+                    <li>Preventing Shellcode</li>
+                    </p>
+                    <hr>
+                    <br>
                     <p class="section-lead">[TO-DO]</p>
                     <br>
                     <br>
@@ -291,6 +300,16 @@
 
                     <p class="lead section-lead"><b>Return-To-Libc:</b></p>
                     <hr>
+                    <p class="section-lead">Summary</p>
+                    <br>
+                    <p class="lead section-lead">Section-Index:</p>
+                    <p class="section-lead">
+                    <li>A Simple Example</li>
+                    <li>Linked Libraries: PLT and GOT are your fwends</li>
+                    <li>Passing Argument on the Stack</li>
+                    </p>
+                    <hr>
+                    <br>
                     <p class="section-lead">[TO-DO]</p>
                     <br>
                     <br>
