asis ctf pwn chal

--- a/stack-based-mem-corruption.html
+++ b/stack-based-mem-corruption.html
@@ -265,7 +265,7 @@
                     <br>
 
 
-                    <p class="lead section-lead"><b>Shellcode:</b></p>
+                    <p class="lead section-lead"><b>Shellcode</b></p>
                     <hr>
                     <p class="section-lead">Shellcode is nothing more than a sequence of architecture specific machine instructions that can be injected into a running process. If execution flow can be redirected to the shellcode, then the processor will begin executing those instructions. The reason this type payload is referred to as shellcode is that it is generally used to pop a new shell from the vulnerable process, allowing an attacker to directly interact with the host system and even escalate their privileges within that system.</p>
                     <br>
