--- a/stack-based-mem-corruption.html
+++ b/stack-based-mem-corruption.html
@@ -66,7 +66,22 @@
             <div class="row">
                 <div class="col-lg-12">
                     <h1 class="section-heading">Stack-Based Memory Corruption</h1>
-                    <h2>Exploitation and Mitigation</h2><br>
+                    <h2>Exploitation and Mitigation</h2>
+                    <br>
+                    <p class="lead section-lead">Index:</p>
+                    <p class="section-lead">
+                    <li>Virtual Address Space of 32 bit ELFs</li>
+                    <li>Understanding the Stack Segment</li>
+                    <li>Classic Stack Buffer Overflow</li>
+                    <li>Stack Canaries</li>
+                    <li>Shellcode</li>
+                    <li>Non-eXecutable Stack</li>
+                    <li>Ret-To-Libc</li>
+                    <li>Address Space Layout Randomization</li>
+                    <li>Return Oriented Programming</li>
+                    </p>
+                    <hr>
+                    <br>
 
                     <p class="lead section-lead"><b>Virtual Address Space (32 bit ELFs):</b></p>
                     <hr>
