--- a/stack-based-mem-corruption.html
+++ b/stack-based-mem-corruption.html
@@ -115,8 +115,8 @@
                     <br>
                     <br>
 
-
-                    <p id="StackSegment" class="lead section-lead"><b>Stack Segment: </b></p>
+                    <div id="StackSegment"></div>
+                    <p class="lead section-lead"><b>Stack Segment: </b></p>
                     <hr>
                     <p class="section-lead">The stack segment is as it’s name implies; a LIFO data structure where data is pushed and popped from a stack. Each element on the stack is a stack frame pertaining to an in-progress function. Within each stack frame, are sub-elements representing local variable data for that particular function as well as two saved pointer values:
                     <li><b>Return Address: </b>4-byte address of the caller function’s next instruction to execute (usually an address within the Code segment or a shared library function)</li>
