--- a/stack-based-mem-corruption.html
+++ b/stack-based-mem-corruption.html
@@ -113,9 +113,8 @@
                     <img src="../Images/lecture_note_images/stack-based-mem-corruption/figure3.png" alt="figure3" width="360" height="480">
                     <p><i>figure 3</i></p>
                     <br>
-                    <br>
 
-                    <div id="StackSegment"></div>
+                    <div id="StackSegment"><br></div>
                     <p class="lead section-lead"><b>Stack Segment: </b></p>
                     <hr>
                     <p class="section-lead">The stack segment is as it’s name implies; a LIFO data structure where data is pushed and popped from a stack. Each element on the stack is a stack frame pertaining to an in-progress function. Within each stack frame, are sub-elements representing local variable data for that particular function as well as two saved pointer values:
