fixed typo regarding contents of the stack segment

--- a/stack-based-mem-corruption.html
+++ b/stack-based-mem-corruption.html
@@ -95,7 +95,7 @@
                     <li><b>Data: </b>Stores initialized global variables</li>
                     <li><b>BSS: </b>Stores unitialized global variables</li>
                     <li><b>Heap: </b>Linked-list for dynamic memory allocation</li>
-                    <li><b>Stack: </b>Contains CPU instructions for executing the program</li>
+                    <li><b>Stack: </b>Contains function frames and local variable data</li>
                     <li><b>Kernel: </b>Space reserved for kernel execution</li>
                     <br>
                     <i>*Note: the kernel segment is referred to as Kernel-land, and all other segments are commonly referred to as User-land or User-space.</i>
