added gist css href

--- a/redo-stack-based-mem-corruption.html
+++ b/redo-stack-based-mem-corruption.html
@@ -17,6 +17,9 @@
     <!-- Custom CSS -->
     <link href="../css/resources.css" rel="stylesheet">
 
+    <!-- Custom gist CSS -->
+    <link href="../css/gist-styling.css" rel="stylesheet">
+
 </head>
 
 <body>
